#187 modified profile page and added cpf as a required item

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -14,7 +14,7 @@
 {% block sidebar %}
 	<div class="panel panel-primary navigation">
         <div class="panel-heading">
-            <h4>Menu</h4>
+            <h4>{% trans "Menu" %}</h4>
         </div>
         <div class="panel-body">
             <ul class="nav nav-pills nav-stacked">
@@ -50,19 +50,19 @@
 						<table class="table table-hover table-edited">
 							<tbody>
 								<tr>
-									<td>Status:</td>
-									<td>Offline</td>
+									<td>{% trans "Status" %}:</td>
+									<td></td>
 								</tr>
 								<tr>
-									<td>Nome:</td>
+									<td>{% trans "Nome" %}:</td>
 									<td>{{user}}</td>
 								</tr>
 								<tr>
-									<td>Login:</td>
+									<td>{% trans "Login" %}</td>
 									<td>{{user.username}}</td>
 								</tr>
 								<tr>
-									<td>Email:</td>
+									<td>{% trans "Email" %}:</td>
 									<td>{{user.email}}</td>
 								</tr>
 							</tbody>
@@ -74,44 +74,71 @@
 						<table class="table table-hover table-edited">
 							<tbody>
 								<tr>
-									<td>Tipo de usuário:</td>
-									<td>{{use.type_profile}}</td>
+									<td>{% trans "Tipo de Usuário" %}:</td>
+									{% if user.type_profile == 1 %}
+										<td>{% trans "Teacher" %}</td>
+									{% else %}
+										<td>{% trans "Student" %}</td>
+									{% endif %}
+									
 								</tr>
 								<tr>
-									<td>CPF:</td>
-									<td>{{user.cpf}}</td>
+									<td>{% trans "CPF" %}:</td>
+									{% if user.cpf %}
+										<td>{{user.cpf}}</td>
+
+									{% else %}
+										<td>{% trans "doesn't posssess CPF" %}</td>
+									{% endif %}
+									
 								</tr>
 								<tr>
-									<td>Número de telefone:</td>
-									<td>{{user.phone}}</td>
+									<td>{% trans "Phone Number" %}:</td>
+									{% if user.phone %}
+										<td>{{user.phone}}</td>
+									{% else %}
+										<td>{% trans "doesn't posssess Phone" %}</td>
+									{% endif %}
+									
 								</tr>
 								<tr>
-									<td>Sexo:</td>
+									<td>{% trans "Gender" %}:</td>
 									<td>{{user.gender}}</td>
 								</tr>
 								<tr>
-									<td>Data de Nascimento:</td>
+									<td>{% trans "Birth Date" %}:</td>
 									<td>{{user.birth_date}}</td>
 								</tr>
 								<tr>
-									<td>Estado e Cidade:</td>
+									<td>{% trans "State and City" %}:</td>
 									<td>{{user.state}} - {{user.city}}</td>
 								</tr>
 								<tr>
-									<td>Titulação:</td>
-									<td>Mestrado</td>
+									<td>{% trans "Title" %}:</td>
+									<td>{{user.titration}}</td>
 								</tr>
 								<tr>
-									<td>Ano:</td>
-									<td>2012</td>
+									<td>{% trans "Year" %}:</td>
+									<td>{{user.year_titration}}</td>
 								</tr>
 								<tr>
-									<td>Instituição:</td>
-									<td>UFPE</td>
+									<td>{% trans "Institution" %}:</td>
+								{% if user.institution %}
+									<td>{{user.institution}}</td>
+								{% else %}
+									<td>{% trans "Didn't inform institution" %}</td>
+								{% endif %}
+									
+									
 								</tr>
 								<tr>
-									<td>Currículo:</td>
-									<td>-</td>
+									<td>{% trans "Curriculum" %}:</td>
+									{% if user.curriculum %}
+										<td>{{user.curriculum}}</td>
+									{% else %}
+										<td>{% trans "Didn't upload any curriculum" %}</td>
+									{% endif %}
+									
 								</tr>
 							</tbody>
 						</table>
