--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -27,7 +27,7 @@
     </div>
 
 	<div class="row">
-		<div class="col-md-8 col-md-offset-3 col-sm-10 col-sm-offset-2  col-xs-12 col-xs-offset-1 col-lg-10 col-lg-offset-2 col-xl-8 col-xl-offset-3">
+		<div class="col-md-6 col-md-offset-4 col-sm-6 col-sm-offset-4  col-xs-6 col-xs-offset-4 col-lg-6 col-lg-offset-4 col-xl-6 col-xl-offset-3">
 			<div class="card">
 				<div class="card-content">
 					<div class="card-body">
@@ -44,7 +44,8 @@
 											{% else %}
 												<label for="{{ field.auto_id }}" class="col-md-4 control-label">{{ field.label }}</label>
 											{% endif %}
-											<div class="col-md-8 col-lg-10 col-lg-offset-2">
+											<div class="col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2 col-sm-10
+											col-sm-offset-2 col-xs-10 col-xs-offset-2">
 												{% if field.auto_id == 'id_birth_date' %}
 													{% render_field field class='form-control input-sm date-picker' %}
 													<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
