--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 {% load static i18n %}
+{% load static i18n permission_tags %}
 {% get_current_language as LANGUAGE_CODE %}
 
 <html>
@@ -93,7 +94,54 @@
 	<div class="container-fluid">
 		<div class="row">
     		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-    			{% block sidebar %}{% endblock %}
+    			{% block sidebar %}
+    				    <div class="panel panel-primary navigation">
+					        <div class="panel-heading">
+					            <h4>{% trans "Menu" %}</h4>
+					        </div>
+					        <div class="panel-body">
+					            <ul class="nav nav-pills nav-stacked">
+					                <li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
+					                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+					                {% if user|has_role:'student' or not user.is_staff %}
+					                    <li><a href="{% url 'course:manage' %}">{% trans 'My courses' %}</a></li>
+					                    <li><a href="{% url 'core:guest' %}">{% trans 'All Courses' %}</a></li>
+					                {% endif %}
+					                {% if user|has_role:'system_admin' %}
+					                    <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
+					                {% endif %}
+					                {% if user|has_role:'system_admin' or user|has_role:'professor' %}
+					                    <li>
+					                        <a href="#courses_list" class="accordion" data-toggle="collapse">{% trans 'Manage Courses' %}</a>
+					                        <div id="courses_list" class="collapse">
+					                            <ul class="nav nav-pill nav-stacked accordion_list">
+					                            {% for course in courses_list %}
+					                                <li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
+					                            {% endfor %}
+					                            </ul>
+					                        </div>
+					                    </li>
+					                {% endif %}
+					            </ul>
+					        </div>
+					    </div>
+
+					    {% if user|has_role:'professor' or user|has_role:'system_admin' %}
+
+						<div class="panel panel-primary navigation">
+						    <div class="panel-heading">
+						        <h3 class="panel-title">Category</h3>
+						    </div>
+						    <div class="panel-body">
+						        <ul class="nav nav-pills nav-stacked">
+						            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+						            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
+						        </ul>
+						    </div>
+						</div>
+							
+						{% endif %}
+	    		{% endblock %}
     		</div>
 		   <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
 				{% block breadcrumbs %}{% endblock %}
