--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -19,20 +19,7 @@
 {% endblock %}
 
 {% block sidebar %}
-  <div class="panel panel-primary navigation">
-        <div class="panel-heading">
-            <h5>{% trans 'Menu' %}</h5>
-        </div>
-        <div class="panel-body">
-            <ul class="nav nav-pills nav-stacked">
-                <li><a href="{% url 'core:home' %}">{% trans "Home" %}</a></li>
-                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
-                <li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
-                <li><a href="{% url 'core:guest' %}">{% trans 'All Courses' %}</a></li>
-            </ul>
-        </div>
-    </div>
-
+  {{block.super}}
 
 {% endblock %}
 
