--- a/app/templates/home_professor.html
+++ b/app/templates/home_professor.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    <div class="panel panel-primary navigation">
+    <div class="panel panel-primary">
         <div class="panel-heading">
             <h5>{% trans 'Menu' %}</h5>
         </div>
