--- a/courses/templates/course/course_card.html
+++ b/courses/templates/course/course_card.html
@@ -4,7 +4,7 @@
 <div class="panel-group ui-accordion ui-widget ui-helper-reset ui-sortable" id="accordion-{{course.slug}}" role="tablist" aria-multiselectable="false">
     <div class="group">
 		<div class="panel panel-info">
-		    <div class="panel-heading" role="tab" >
+		    <div class="panel-heading course" role="tab" >
 		      <div class="row">
                                 <div class="col-md-1 moreAccordion" data-toggle="collapse" data-parent="#accordion-{{course.slug}}" href=".collapseOne-{{course.slug}}" aria-expanded="false" aria-controls="collapseOne-{{course.slug}}">
                                     <div class="btn-group">
