--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    <div class="panel panel-primary navigation">
+    <div class="panel panel-primary">
         <div class="panel-heading">
             <h4>Menu</h4>
         </div>
@@ -83,7 +83,7 @@
 		</div>
 	</form>
 </div>
-	
+
 
 </fieldset>
 	<div class="col-md-12">
