--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -64,7 +64,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    <div class="panel panel-primary navigation">
+    <div class="panel panel-primary">
         <div class="panel-heading">
             <h4>Menu</h4>
         </div>
