--- a/app/templates/home_student.html
+++ b/app/templates/home_student.html
@@ -16,7 +16,7 @@
 
 
 {% block sidebar %}
-    <div class="panel panel-primary navigation">
+    <div class="panel panel-primary">
         <div class="panel-heading">
             <h4>{% trans 'Menu' %}</h4>
         </div>
