--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -400,7 +400,7 @@ ul, li {
 .divMoreActions div button {padding-left: 10px; padding-right: 10px; padding-bottom: 10px; margin-bottom: 4px; height: 31px;}
 .headingOne {padding-top: 0px; padding-bottom: 50px;}
 .headingTwo {padding-top: 0px; padding-bottom: 50px;}
-.panel-heading{cursor:move;}
+.course{padding-top: 0px; padding-bottom: 0px; cursor:move; }
 .titleTopic {padding-top: 18px; padding-left: 0px;}
 .titleTopic-detail {padding-top: 8px;}
 .titleTopic a h4 {margin-top: 0px; color: white; cursor:pointer;}
