--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -44,7 +44,7 @@
 
     	{% if user|has_role:'professor' or user|has_role:'system_admin' %}
 
-		<div class="panel panel-primary navigation">
+		<div class="panel panel-primary">
 		    <div class="panel-heading">
 		        <h3 class="panel-title">Category</h3>
 		    </div>
