modifying home subject and card topic #205

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -408,8 +408,7 @@ ul, li {
 .moreAccordion div button{ padding-left: 0px; padding-right: 0px;}
 .cards-content{ padding-left: 0px; padding-right: 0px; }
 .cards-detail{margin-left: 4%;}
-.cards-detail .panel .panel-heading{background-color:#81D4FA;}
+.cards-detail .panel .panel-heading{/*background-color:;*/}
 .cards-detail .panel .panel-heading h4{color:black;}
-.subject{ padding-top: 0px; padding-bottom: 0px; }
-.course{padding-top: 0px; padding-bottom: 0px;}
+.course, .subject, .topic{ padding-top: 0px; padding-bottom: 0px; }
 .course-detail{padding-top: 10px; padding-bottom: 10px;}
