--- a/courses/templates/subject/index.html
+++ b/courses/templates/subject/index.html
@@ -17,27 +17,46 @@
 {% endblock %}
 
 {% block sidebar %}
-	<div class="panel panel-primary">
-        <div class="panel-heading">
-            <h5>{% trans 'Menu' %}</h5>
-        </div>
-        <div class="panel-body">
-        	<ul class="nav nav-pills nav-stacked">
-              	<li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
-              	<li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
-            </ul>
-        </div>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h4>Menu</h4>
     </div>
+    <div class="panel-body">
+        <ul class="nav nav-pills nav-stacked">
+            <li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
+            <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+            {% if user|has_role:'student' or not user.is_staff %}
+                <li><a href="{% url 'course:manage' %}">{% trans 'My courses' %}</a></li>
+                <li><a href="{% url 'core:guest' %}">{% trans 'All Courses' %}</a></li>
+            {% endif %}
+            {% if user|has_role:'system_admin' %}
+                <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
+            {% endif %}
+            {% if user|has_role:'system_admin' or user|has_role:'professor' %}
+                <li>
+                    <a href="#courses_list" class="accordion" data-toggle="collapse">{% trans 'Manage Courses' %}</a>
+                    <div id="courses_list" class="collapse">
+                        <ul class="nav nav-pill nav-stacked accordion_list">
+                        {% for course in courses_list %}
+                            <li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
+                        {% endfor %}
+                        </ul>
+                    </div>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+</div>
 
 
 {% endblock %}
 
 {% block content %}
   	<div class="panel panel-info">
-    	<div class="panel-heading">
+    	<div class="panel-heading course-detail">
 			<div class="row">
 	      		<div class="col-md-10 col-sm-10">
-	        		<h3>{{subject}}</h3>
+	        		 <h4>{{subject}}</h4>
 	      		</div>
 				{% professor_subject subject user as subject_professor%}
 	      		{% if subject_professor %}
