--- a/courses/templates/course/update.html
+++ b/courses/templates/course/update.html
@@ -25,7 +25,7 @@
 							<input type="text" readonly="" class="form-control" placeholder="Choose your photo..."/>
 							<span class="input-group-btn input-group-sm">
 									<button type="button" class="btn btn-fab btn-fab-mini">
-											<i class="material-icons">attach_file</i>
+											<i class="material-icons">{% trans 'attach_file' %}</i>
 									</button>
 							</span>
 						</div>
