--- a/exam/templates/exam/gap_filling_question.html
+++ b/exam/templates/exam/gap_filling_question.html
@@ -1,3 +1,3 @@
 <div class="form-group" id="gapFilling" style="display: none;">
-  <p>Gap Filling Question</p>
+  <p>{% trans 'Gap Filling Question' %}</p>
 </div>
