--- a/files/templates/files/create_file.html
+++ b/files/templates/files/create_file.html
@@ -65,14 +65,14 @@
 
                             <div class="form-group">
                                 <div class="col-md-12 text-center">
-                                    <p><b>The file size shouldn't exceed 10MB</b></p>
+                                    <p><b>{% trans 'The file size shouldnt exceed 10MB' %}</b></p>
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-md-12">
                                      <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
-                                    <button class="btn btn-raised btn-primary" type="submit">Submit</button>
+                                    <button class="btn btn-raised btn-primary" type="submit">{% trans 'Submit' %}</button>
                                 </div>
                             </div>
                         </fieldset>
