--- a/files/templates/files/delete_file.html
+++ b/files/templates/files/delete_file.html
@@ -32,7 +32,7 @@
                             <div class="form-group">
                                 <div class="col-md-12">
                                      <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
-                                    <button class="btn btn-raised btn-primary" type="submit">Delete</button>
+                                    <button class="btn btn-raised btn-primary" type="submit">{% trans 'Delete' %}</button>
                                 </div>
                             </div>
                         </fieldset>
