--- a/users/templates/users/remove_account.html
+++ b/users/templates/users/remove_account.html
@@ -25,8 +25,8 @@
     <div class="row">
      <div class="col-md-12">
       <div class="well well-lg">
-        <h2>Voce tem certeza que deseja remover esta conta?</h2>
-        <p>Todos os seus dados serão removidos e não haverá como recupera-los posteriormente.</p>
+        <h2>{% trans 'Voce tem certeza que deseja remover esta conta?' %}</h2>
+        <p>{% trans 'Todos os seus dados serão removidos e não haverá como recupera-los posteriormente.' %}</p>
         <div class="row">
           <div class="col-md-3 col-sm-2 col-xs-2">
               <a href="#" class="btn btn-raised btn-block btn-success" >{% trans 'Remove' %}</a>
