--- a/app/templates/home_student.html
+++ b/app/templates/home_student.html
@@ -45,7 +45,7 @@
     {% endif %}
     <div class="panel panel-default">
       	<div class="panel-body">
-        	His course has notified a new activity!
+        	{% trans 'His course has notified a new activity!' %}
       	</div>
       	<div class="panel-footer">
         	Go
@@ -53,7 +53,7 @@
     </div>
     <div class="panel panel-default">
       	<div class="panel-body">
-        	His teacher has notified a new material!
+        	{% trans 'His teacher has notified a new material!' %}
       	</div>
       	<div class="panel-footer">
         	Go
@@ -61,10 +61,10 @@
     </div>
     <div class="panel panel-default">
       	<div class="panel-body">
-            You have a new guardian!
+            {% trans 'You have a new guardian!' %}
       	</div>
       	<div class="panel-footer">
-        	Go
+        	{% trans 'Go' %}
       	</div>
     </div>
 {% endblock %}
