--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -70,14 +70,14 @@
              			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">
                  <a  class="dropdown-toggle" data-toggle="dropdown"> <span id="notification-count" class="badge notification-count">{{notifications.count}}</span><i class="fa fa-bell" aria-hidden="true"></i></a>
                    <ul id="notification-dropdown" class="dropdown-menu">
-                   <li class="dropdown-header">Notifications</li>
+                   <li class="dropdown-header"> {% trans 'Notifications' %}</li>
                    		{% include "notifications.html" %}
 
                    		<li>
                    		 <a onclick="getNotifications(5)">
                    			<div id="notification-see-more" class="list-group-item">
                                   <div class="row-content">
-                                    <p class="list-group-item-text">See More</p>
+                                    <p class="list-group-item-text">{% trans 'See More' %}</p>
                                 </div>
                        </a>
                    		</li>
@@ -130,12 +130,12 @@
 
 						<div class="panel panel-primary navigation">
 						    <div class="panel-heading">
-						        <h3 class="panel-title">Category</h3>
+						        <h3 class="panel-title">{% trans 'Category' %}</h3>
 						    </div>
 						    <div class="panel-body">
 						        <ul class="nav nav-pills nav-stacked">
-						            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
-						            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
+						            <li><a href="{% url 'course:create_cat' %}">{% trans 'Create Category'%}</a></li>
+						            <li><a href="{% url 'course:manage_cat' %}">{% trans 'List Category' %}</a></li>
 						        </ul>
 						    </div>
 						</div>
