--- a/core/templates/lembrar_senha.html
+++ b/core/templates/lembrar_senha.html
@@ -37,7 +37,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 
 
-	<title>Projeto Amadeus</title>
+	<title>{% trans 'Amadeus Project' %}</title>
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
 
@@ -62,7 +62,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 					<form name="logonForm" method="post" action="/amadeuslms/validateLogin.do">
 			  		<dt><input type="text" name="login" maxlength="15" size="15" value="" class="inputlogin"> </dt>
 	      			<dt><input type="password" name="password" maxlength="15" size="15" value="" class="inputlogin">&nbsp;
-						<br /><a href="{% url 'index' %}" name="logonForm" class="button">Entrar</a></dt>
+						<br /><a href="{% url 'index' %}" name="logonForm" class="button">{% trans 'Enter' %}</a></dt>
 		            </form>
 <script type="text/javascript" language="JavaScript">
   <!--
@@ -98,23 +98,23 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 <div id="institutional_menu">
 
-	<span><a href="/amadeuslms/fProject.do" target="_blank">O Projeto</a></span>
+	<span><a href="/amadeuslms/fProject.do" target="_blank">{% trans 'O Projeto' %}</a></span>
 	<span>&nbsp;|&nbsp;</span>
-	<span><a href="/amadeuslms/fCCTE.do" target="_blank">Grupo CCTE</a></span>
+	<span><a href="/amadeuslms/fCCTE.do" target="_blank">{% trans 'Grupo CCTE' %}</a></span>
 </div>
 		<div id="pTitle" class="pTitle">
-			<h2>Lembrar senha</h2>
+			<h2>{% trans 'Lembrar senha' %}</h2>
 		</div>
 		<div id="pBreadCrumbs" class="pBreadCrumbs">
 			<ul id="breadcrumb">
-				<li><a href="{% url 'home' %}">Página Inicial</a></li>
-				<li>Lembrar senha</li>
+				<li><a href="{% url 'home' %}">{% trans 'Página Inicial' %}</a></li>
+				<li>{%trans 'Lembrar senha' %}</li>
 			</ul>
 		</div>
 		<div id="pLeftMenu" class="pLeftMenu">
 			<div id="side_menu_1">
 				<ul id="menu_sessoes">
-					<li><a href="{% url 'create_account' %}" class="insert">Nova conta</a></li>
+					<li><a href="{% url 'create_account' %}" class="insert">{% trans 'Nova conta' %}</a></li>
 			    </ul>
 			</div>
 		</div>
@@ -123,9 +123,9 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 
 				<form name="remindPasswordForm" method="post" action="/amadeuslms/remindPassword.do">
-				<dt>Endereço de e-mail</dt>
+				<dt>{% trans 'Endereço de e-mail' %}</dt>
 					<dd><input type="text" name="email" value="" class="formfield2" id="username"></dd>
-					<dd class="description">Seu endereço de e-mail (exemplo@mail.com)</dd>
+					<dd class="description">{% trans 'Seu endereço de e-mail (exemplo@mail.com)' %}</dd>
 					<dt class="field"><input type="submit" name="remindPassword" value="Enviar e-mail" class="button"></dt>
 				</form>
 <script type="text/javascript" language="JavaScript">
@@ -160,7 +160,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 
 <div id="footnote">
-	<dl><dd>Copyright Amadeus. Todos os direitos reservados<dd></dl>
+	<dl><dd>{% trans 'Copyright Amadeus. Todos os direitos reservados' %}<dd></dl>
 </div>
 
 	</div>
