--- a/courses/templates/category/create.html
+++ b/courses/templates/category/create.html
@@ -27,25 +27,25 @@
 
     <div class="panel panel-primary navigation">
 	    <div class="panel-heading">
-	        <h3 class="panel-title">Actions</h3>
+	        <h3 class="panel-title">{% trans 'Actions' %}</h3>
 	    </div>
 	    <div class="panel-body">
 	        <ul class="nav nav-pills nav-stacked">
-	            <li><a href="javascript:void(0)">Replicate Course</a></li>
-	            <li><a href="{% url 'course:create' %}">Create Course</a></li>
-	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+	            <li><a href="javascript:void(0)">{% trans 'Replicate Course' %}</a></li>
+	            <li><a href="{% url 'course:create' %}">{% trans 'Create Course' %}</a></li>
+	            <li><a href="{% url 'course:create_cat' %}">{% trans 'Create Category' %}</a></li>
 	        </ul>
 	    </div>
 	</div>
 
 	<div class="panel panel-primary navigation">
 	    <div class="panel-heading">
-	        <h3 class="panel-title">Category</h3>
+	        <h3 class="panel-title">{% trans 'Category' %}</h3>
 	    </div>
 	    <div class="panel-body">
 	        <ul class="nav nav-pills nav-stacked">
-	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
-	            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
+	            <li><a href="{% url 'course:create_cat' %}">{% trans 'Create Category' %}</a></li>
+	            <li><a href="{% url 'course:manage_cat' %}">{% trans 'List Category' %}</a></li>
 	        </ul>
 	    </div>
 	</div>
