--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -49,13 +49,13 @@
             <div class="row">
               <div class="col-xs-6 col-md-6">
                 <div class="resource_inline">
-                  <h4>Material</h4>
+                  <h4>{% trans 'Material' %}</h4>
                 </div>
                 <div class="resource_inline">
                   <div class="dropdown">
                     <a href="#" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dLabel">
-                        <li><a href=" javascript:get_modal_link('{% url 'course:links:create_link' topic.slug %}', '#createLinksModal','#divModalLink')  ">Create a Link<div class="ripple-container"><div class="ripple ripple-on ripple-out" style="left: 54.5312px; top: 22px; background-color: rgb(0, 150, 136); transform: scale(20);"></div></div></a></li>
+                        <li><a href=" javascript:get_modal_link('{% url 'course:links:create_link' topic.slug %}', '#createLinksModal','#divModalLink')  ">{% trans 'Create a Link' %}<div class="ripple-container"><div class="ripple ripple-on ripple-out" style="left: 54.5312px; top: 22px; background-color: rgb(0, 150, 136); transform: scale(20);"></div></div></a></li>
                         <li>
                             <a href="javascript:get_modal_file('{% url 'course:file:create_file' topic.slug %}', '#fileModal', '#divModalFile')">
                                 {% trans "Create a file" %}
@@ -76,7 +76,7 @@
               </div>
               <div class="col-xs-4 col-md-4">
                 <div class="resource_inline">
-                  <h4>Activities</h4>
+                  <h4>{% trans 'Activities' %}</h4>
                 </div>
                 <div class="resource_inline">
                   <div class="dropdown">
@@ -100,23 +100,23 @@
           </div>
           <div class="editation" style="display: none">
             <div class="form-group">
-              <label class="control-label" for="focusedInput2">Name Topic</label>
+              <label class="control-label" for="focusedInput2">{% trans 'Name Topic' %}</label>
               <input type="text" class="form-control" value="Topic 1">
             </div>
             <div class="form-group is-empty">
-              <label class="control-label" for="focusedInput2">Description</label>
+              <label class="control-label" for="focusedInput2">{% trans 'Description' %}</label>
               <textarea class="form-control" rows="3" id="textArea"></textarea>
             </div>
             <div class="row">
               <div class=" col-xs-6 col-md-4">
                 <div class="resource_inline">
-                  <h4>Material</h4>
+                  <h4>{% trans 'Material' %}</h4>
                 </div>
                 <div class="resource_inline">
                   <div class="dropdown">
                     <a href="#" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dLabel">
-                      <li><a href="javascript:get_modal_link('{% url 'course:links:create_link' topic.slug %}', '#createLinksModal','#divModalLink')">Create a Link</a></li>
+                      <li><a href="javascript:get_modal_link('{% url 'course:links:create_link' topic.slug %}', '#createLinksModal','#divModalLink')">{% trans 'Create a Link' %}</a></li>
                       <li>
                         <a href="#">
                             {% trans "Create a file" %}
@@ -136,13 +136,13 @@
               </div>
               <div class="col-xs-4 col-md-offset-1 col-md-4">
                 <div class="resource_inline">
-                  <h4>Activities</h4>
+                  <h4>{% trans 'Activities' %}</h4>
                 </div>
                 <div class="resource_inline">
                   <div class="dropdown">
                     <a href="#" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dLabel">
-                      <li>Qualquer coisa</li>
+                      <li>{% trans 'Anything' %}</li>
                     </ul>
                   </div>
                 </div>
@@ -156,8 +156,8 @@
             </div>
             <div class="form-group">
               <div class="col-md-10">
-                <button type="button" class="btn btn-raised btn-default edit_card_end">Cancel</button>
-                <button type="submit" class="btn btn-raised btn-primary edit_card_end">Submit</button>
+                <button type="button" class="btn btn-raised btn-default edit_card_end">{% trans 'Cancel' %}</button>
+                <button type="submit" class="btn btn-raised btn-primary edit_card_end">{% trans 'Submit' %}</button>
               </div>
             </div>
           </div>
@@ -174,11 +174,11 @@
             <h4 class="modal-title"></h4>
           </div>
           <div class="modal-body">
-            <p>Delete your Topic?</p>
+            <p>{% trans 'Delete your Topic?' %}</p>
           </div>
           <div class="modal-footer">
 
-            <a href="" target="_self"><button type="button" class="btn btn-primary">Confirm</button></a>
+            <a href="" target="_self"><button type="button" class="btn btn-primary">{% trans 'Confirm' %}</button></a>
 
           </div>
         </div>
@@ -197,32 +197,32 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-            <h4 class="modal-title" id="myModalLabel">Material EMBED</h4>
+            <h4 class="modal-title" id="myModalLabel">{% trans 'Material EMBED' %}</h4>
           </div>
           <div class="modal-body">
             <div class="form-group is-empty">
-              <label for="inputEmail" class="col-md-2 control-label">Name:</label>
+              <label for="inputEmail" class="col-md-2 control-label">{% trans 'Name' %}:</label>
               <div class="col-md-10">
                 <input type="text" class="form-control" id="inputEmail" placeholder="Name">
               </div>
             </div>
             <form class="form-horizontal">
               <div class="form-group is-empty">
-                <label for="textArea" class="col-md-2 control-label">Code:</label>
+                <label for="textArea" class="col-md-2 control-label">{% trans 'Code' %}:</label>
 
                 <div class="col-md-10">
                     <textarea class="form-control" rows="2" id="textArea"></textarea>
-                    <span class="help-block">Material description</span>
+                    <span class="help-block">{% trans 'Material description' %}</span>
                 </div>
               </div>
               <div class="form-group is-empty">
-              <label for="number" class="col-md-2 control-label">Height</label>
+              <label for="number" class="col-md-2 control-label">{% trans 'Height' %}</label>
                 <div class="col-md-4">
                   <input type="number" class="form-control" id="inputNumber" placeholder="Heiht">
                 </div>
               </div>
               <div class="form-group is-empty">
-              <label for="number" class="col-md-2 control-label">Weight</label>
+              <label for="number" class="col-md-2 control-label">{% trans 'Weight' %}</label>
                 <div class="col-md-4">
                   <input type="number" class="form-control" id="inputNumber" placeholder="Weight">
                 </div>
@@ -235,7 +235,7 @@
             <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">Close</button>-->
 
             <!-- Put curtom buttons here!!!  -->
-            <button type="button" class="btn btn-primary btn-raised">Confirm</button>
+            <button type="button" class="btn btn-primary btn-raised">{% trans 'Confirm' %}</button>
           </div>
         </div>
       </div>
@@ -254,27 +254,27 @@
             <form class="form-horizontal">
 
           <fieldset>
-            <legend>Atividade Proposta</legend>
+            <legend>{% trans 'Atividade Proposta' %}</legend>
             <div class="form-group is-empty">
-              <label for="NameIn" class="col-md-2 control-label">Name:</label>
+              <label for="NameIn" class="col-md-2 control-label">{% trans 'Name' %}:</label>
               <div class="col-md-10">
                 <input type="text" id="NameIn" class="form-control">
               </div>
             </div>
             <div class="form-group is-empty">
-              <label for="DescIn" class="col-md-2 control-label">Describe:</label>
+              <label for="DescIn" class="col-md-2 control-label">{% trans 'Describe' %}:</label>
               <div class="col-md-10">
                 <textarea class="form-control" id="DescIn" rows="2"></textarea>
               </div>
             </div>
             <div class="form-group is-empty">
-              <label for="DateIn" class="col-md-2 control-label">Opening: </label>
+              <label for="DateIn" class="col-md-2 control-label">{% trans 'Opening' %}: </label>
               <div class="col-md-10">
                 <input type="text" id="DateIn" class="form-control date-picker" requerid="">
               </div>
             </div>
             <div class="form-group is-empty">
-              <label for="DateIn" class="col-md-2 control-label">Ending: </label>
+              <label for="DateIn" class="col-md-2 control-label">{% trans 'Ending' %}: </label>
               <div class="col-md-10">
                 <input type="text" id="DateIn" class="form-control date-picker" requerid="">
               </div>
@@ -283,15 +283,15 @@
               <div class="col-md-offset-2 col-md-10">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox"><span class="checkbox-material"><span class="check"></span></span> Send Later
+                    <input type="checkbox"><span class="checkbox-material"><span class="check"></span></span> {% trans 'Send Later' %}
                   </label>
                 </div>
               </div>
             </div>
             <div class="form-group">
               <div class="col-md-10 col-md-offset-2">
-                <button type="button" class="btn btn-default">Cancel</button>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-default">{% trans 'Cancel' %}</button>
+                <button type="submit" class="btn btn-primary">{% trans 'Submit' %}</button>
               </div>
             </div>
 
