--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -34,15 +34,15 @@
     {% if user|has_role:'professor' %}
       <div class="panel panel-primary navigation">
       <div class="panel-heading">
-          <h3 class="panel-title">Actions</h3>
+          <h3 class="panel-title">{% trans 'Actions' %}</h3>
       </div>
       <div class="panel-body">
           <ul class="nav nav-pills nav-stacked">
-              <li><a href="javascript:void(0)">Participants</a></li>
-              <li><a href="javascript:void(0)">Replicate subject</a></li>
-              <li><a href="javascript:void(0)">Create subject</a></li>
-              <li><a href="javascript:void(0)">Edit subject</a></li>
-              <li><a href="javascript:void(0)">Remove subject</a></li>
+              <li><a href="javascript:void(0)">{% trans 'Participants' %}</a></li>
+              <li><a href="javascript:void(0)">{% trans 'Replicate subject' %}</a></li>
+              <li><a href="javascript:void(0)">{% trans 'Create subject' %}</a></li>
+              <li><a href="javascript:void(0)">{% trans 'Edit subject' %}</a></li>
+              <li><a href="javascript:void(0)">{% trans 'Remove subject' %}</a></li>
           </ul>
       </div>
     </div>
@@ -109,12 +109,12 @@
                     <div class="panel-body">
                      <div class="row">
                       <div class="col-md-4">
-                       <i class="fa fa-file-archive-o fa-lg" aria-hidden="true">Atividade.doc</i>
+                       <i class="fa fa-file-archive-o fa-lg" aria-hidden="true">{% trans 'Atividade.doc' %}</i>
                      </div>
 										 {% professor_subject subject user as permi_test%}
                      {% if permi_test %}
                         <div class="col-md-4">
-                          <label> Nota:</label>
+                          <label> {% trans 'Nota' %}:</label>
                           <input type="number" step="0.01">
                         </div>
                       {% else %}
@@ -124,7 +124,7 @@
                         <div class="form-group {% if form.pdf.errors %} has-error {% endif %}">
                             {{ form.as_p }}
                         </div>
-                        <button type="submit" class="btn btn-success" id="send_button">Enviar</button>
+                        <button type="submit" class="btn btn-success" id="send_button">{% trans 'Enviar' %}</button>
                       </div>
                      {% endif %}
                   </div>
