--- a/exam/templates/exam/multiple_choice_question.html
+++ b/exam/templates/exam/multiple_choice_question.html
@@ -1,6 +1,6 @@
 <div class="form-group" id="multipleChoice">
 
-  <label for="questionName" class="col-md-2 control-label">Question</label>
+  <label for="questionName" class="col-md-2 control-label">{% trans 'Question' %}</label>
 
 
   <div class="col-md-10">
@@ -10,7 +10,7 @@
 
 </div>
 <div class="form-group">
-  <label for="alternative" class="col-md-2 control-label">Alternatives</label>
+  <label for="alternative" class="col-md-2 control-label">{% trans 'Alternatives' %}</label>
   <div class="col-md-10" id="radios">
     <div class="radio radio-primary">
       <label>
@@ -29,7 +29,7 @@
 <!-- new alternative button -->
 <div class="form-group">
   <div class="col-md-12 col-md-offset-2">
-  <button type="button" class="btn btn-primary" id="newAlternative">New Alternative</button>
+  <button type="button" class="btn btn-primary" id="newAlternative">{% trans 'New Alternative' %]</button>
   </div>
 </div>
 <div class="form-group">
