--- a/forum/templates/forum/forum_list.html
+++ b/forum/templates/forum/forum_list.html
@@ -56,7 +56,7 @@
                     {% endif %}
                     <span class="input-group-btn">
                         <button type="submit" class="btn btn-fab btn-fab-mini">
-                            <i class="material-icons">send</i>
+                            <i class="material-icons">{% trans 'send' %}</i>
                         </button>
                     </span>
                 </div>
