--- a/forum/templates/forum/forum_view.html
+++ b/forum/templates/forum/forum_view.html
@@ -88,7 +88,7 @@
                                     {% endif %}
                                     <span class="input-group-btn">
                                         <button type="submit" class="btn btn-fab btn-fab-mini">
-                                            <i class="material-icons">send</i>
+                                            <i class="material-icons">{% trans 'send' %}</i>
                                         </button>
                                     </span>
                                 </div>
