--- a/forum/templates/post_answers/post_answer_form.html
+++ b/forum/templates/post_answers/post_answer_form.html
@@ -35,7 +35,7 @@
 					{% else %}
 						<span class="input-group-btn">
 					        <button type="submit" class="btn btn-fab btn-fab-mini">
-					            <i class="material-icons">send</i>
+					            <i class="material-icons">{% trans 'send' %}</i>
 					        </button>
 					    </span>
 					{% endif %}
