--- a/links/templates/links/create_link.html
+++ b/links/templates/links/create_link.html
@@ -6,7 +6,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-        <h4 class="modal-title" id="createLink">Create a New Link</h4>
+        <h4 class="modal-title" id="createLink">{% trans 'Create a New Link' %}</h4>
       </div>
       <div class="modal-body">
         <!-- Card -->
@@ -31,8 +31,8 @@
             {% render_field field class='form-control' %}
         {% endfor %}
         <div class="form-group">
-          <a href="javascript:void(0)" class="btn btn-raised btn-default" data-dismiss="modal">Cancel</a>
-          <button class="btn btn-raised btn-primary" type="submit">Submit</button>
+          <a href="javascript:void(0)" class="btn btn-raised btn-default" data-dismiss="modal">{% trans 'Cancel' %}</a>
+          <button class="btn btn-raised btn-primary" type="submit">{% trans 'Submit' %]</button>
         </div>
         <!-- .end Card -->
       </div>
