--- a/links/templates/links/delete_link.html
+++ b/links/templates/links/delete_link.html
@@ -7,12 +7,12 @@
         <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
-        <p>Do you really want to delete this link?</p>
+        <p>{% trans 'Do you really want to delete this link?' %}</p>
       </div>
       <div class="modal-footer">
         <!--  -->
-        <button type="button" class="btn btn-primary btn-default" data-dismiss="modal">Cancel</button>
-        <a href="http://www.google.com" target="_self"><button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Confirm</button></a>
+        <button type="button" class="btn btn-primary btn-default" data-dismiss="modal">{% trans 'Cancel' %}</button>
+        <a href="http://www.google.com" target="_self"><button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true">{% trans 'Confirm' %}</button></a>
 
       </div>
     </div>
